# NloptWraper_Python-C

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  fit_main.c  fit_main.py  libnlopt.so.0.9.0  out_nlopt_original  wrapper.c
cmake/: FindNumPy.cmake
